actualizacion de proyectos

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="container">
             <div class="container__div">
                 <i class="bi bi-laptop"></i>
-                <h6 class="container__nombre">Leandro Romano</h6>
+                <h6 class="container__nombre">Luis Romano</h6>
             </div>
             <nav class="menu">
                 <a class="menu__item" href="#sobreMi">Sobre mi</a>
@@ -36,8 +36,8 @@
         </div>
         <div class="info">
             <div class="infoDescripcion">
-                <h1 class="infoDescripcion__titulo">Hola, mi nombre es Leandro Romano.</h1>
-                <h4 class="infoDescripcion__texto">Soy desarrollador Front End y estoy en busca de nuevos desafios.</h4>
+                <h1 class="infoDescripcion__titulo">Hola, mi nombre es Luis Romano.</h1>
+                <h4 class="infoDescripcion__texto">Soy desarrollador Full Stack y estoy en busca de nuevos desafios.</h4>
                 <div class="infoPersonal__Redes">
                     <a href="https://github.com/rockmano88" target="_blank">Github<i class="bi bi-arrow-up-right"></i></a>
                     <a href="https://www.linkedin.com/in/luis-romano-a4a953180/" target="_blank">Linkedin<i class="bi bi-arrow-up-right"></i></a>
@@ -54,7 +54,7 @@
     <section class="sobreMi" id="sobreMi">
         <h2 class="sobreMi__titulo">Sobre mi</h2>
         <p class="sobreMi__parrafo">
-            Soy de Mendoza, Argentina. Tengo 33 años. Me apasiona todo lo relacionado a la tecnología. Me gustan los deportes y las actividades al aire libre. En mis ratos libres estudio guitarra. 
+            Soy de Mendoza, Argentina. Tengo 34 años. Me apasiona todo lo relacionado a la tecnología. Me gustan los deportes y las actividades al aire libre. En mis ratos libres estudio guitarra. 
             </p>
         <p class="sobreMi__parrafo">Me destaco por ser una persona proactiva,
             organizada y responsable, con buenas
@@ -132,16 +132,16 @@
         </div>
         <div class="trabajos__contenido">
             <div class="trabajos__contenido-imagen">
-                <img src="imagenes/trabajos-encriptador.png" alt="">
+                <img src="imagenes/AluraHotel.png" alt="">
             </div>
             <div class="trabajos__info">
             <div class="trabajos__info-texto">
-                <h2>Encriptador de Textos</h2>
-                <p>Creado con HTML, CSS, Javascript</p>
+                <h2>Alura Hotel</h2>
+                <p>Desarrollado con Java y MySql</p>
             </div>
             <div class="trabajos__info-botones">
-                <button><a href="https://github.com/rockmano88/Oracle-One---Challenge-Spring-1---Encriptador-de-texto-.git" target="_blank">Repositorio</a></button>
-                <button><a href="https://rockmano88.github.io/Oracle-One---Challenge-Spring-1---Encriptador-de-texto-/" target="_blank">Ver Demo</a></button>
+                <button><a href="https://github.com/rockmano88/Java-Sprint2-AluraHotel" target="_blank">Repositorio</a></button>
+                <button><a href="https://github.com/rockmano88/Java-Sprint2-AluraHotel/blob/main/README.md" target="_blank">Ver Read Me</a></button>
             </div>
         </div>
         </div>
@@ -152,26 +152,26 @@
             <div class="trabajos__info">
             <div class="trabajos__info-texto">
                 <h2>Juego del Ahorcado</h2>
-                <p>Creado con HTML, CSS, Javascript</p>
+                <p>Desarrollado con HTML, CSS, Javascript</p>
             </div>
             <div class="trabajos__info-botones">
                 <button><a href="https://github.com/rockmano88/Oracle-One-Challenge-Spring-2-Juego-Ahorcado.git" target="_blank">Repositorio</a></button>
-                <button><a href="https://rockmano88.github.io/Oracle-One-Challenge-Spring-2-Juego-Ahorcado/" target="_blank">Ver demo</a></button>
+                <button><a href="https://rockmano88.github.io/Oracle-One-Challenge-Sprint-2-Juego-Ahorcado/" target="_blank">Ver demo</a></button>
             </div>
         </div>
         </div>
         <div class="trabajos__contenido">
             <div class="trabajos__contenido-imagen">
-                <img src="imagenes/formulario.png" alt="">
+                <img src="imagenes/aluraGeek.png" alt="">
             </div>
             <div class="trabajos__info">
             <div class="trabajos__info-texto">
-                <h2>Formulario con Validaciones</h2>
-                <p>Creado con Javascript</p>
+                <h2>Ecommerce</h2>
+                <p>Desarrollado con Javascript, HTML, CSS</p>
             </div>
             <div class="trabajos__info-botones">
-                <button><a href="https://github.com/rockmano88/HTML-Validaciones-Javascript.git" target="_blank">Repositorio</a></button>
-                <button><a href="https://rockmano88.github.io/Formulario-con-validaciones-en-Javascript/" target="_blank">Demo</a></button>
+                <button><a href="https://github.com/rockmano88/alurageek" target="_blank">Repositorio</a></button>
+                <button><a href="https://rockmano88.github.io/alurageek/" target="_blank">Demo</a></button>
             </div>
         </div>
         </div>
@@ -182,7 +182,7 @@
             <div class="trabajos__info">
             <div class="trabajos__info-texto">
                 <h2>To Do</h2>
-                <p>Creado con Javascript</p>
+                <p>Desarrollado con Javascript</p>
             </div>
             <div class="trabajos__info-botones">
                 <button><a href="https://github.com/rockmano88/To-Do-Javascript.git" target="_blank">Repositorio</a></button>
