actualizacion de proyectos

--- a/index.html
+++ b/index.html
@@ -76,7 +76,6 @@
             <div class="grid__item-skills"></div>
             <div class="grid__item-skills"></div>
             <div class="grid__item-skills"></div>
-            <div class="grid__item-skills"></div>
         </div>
     </section>
 
@@ -112,14 +111,9 @@
                 <p>Septiembre 2020 | Mayo 2021</p>
             </div>
             <div class="grid__item-formacion">
-                <img src="imagenes/open-bootcamp.jpeg" alt="">
-                <h4>HTML y CSS avanzado</h4>
-                <p>Primer semestre 2022</p>
-            </div>
-            <div class="grid__item-formacion">
-                <img src="imagenes/one" alt="">
-                <h4>Lógica de Programación y Front End</h4>
-                <p>Actualidad</p>
+                <img src="imagenes/Oracle-ONE-3661656183.jpeg" alt="">
+                <h4>Lógica de Programación<br> y Desarrollo Front End</h4>
+                <p>Agosto 2022 | Enero 2023</p>
             </div>
         </div>
 
@@ -130,6 +124,23 @@
         <div class="trabajos__titulo">
             <h2>Proyectos Realizados</h2>
         </div>
+
+        <div class="trabajos__contenido-2">
+            <div class="trabajos__contenido-imagen">
+                <img src="imagenes/inkua.png" alt="">
+            </div>
+            <div class="trabajos__info">
+            <div class="trabajos__info-texto">
+                <h2>Human Front Aid</h2>
+                <p>Desarrollado con HTML, CSS, Javascript</p>
+            </div>
+            <div class="trabajos__info-botones">
+                <button><a href="https://www.figma.com/proto/U1BeER5T9DanUcVDxCyJt6/Human-Front-Aid?page-id=129%3A19&node-id=596-3995&viewport=-2355%2C-1448%2C0.08&scaling=scale-down&starting-point-node-id=596%3A3995" target="_blank">Diseño</a></button>
+                <button><a href="https://sites.google.com/inkua.de/diseo-departamentoweb/proyectos/human-front-aid" target="_blank">Mas Info</a></button>
+            </div>
+        </div>
+        </div>
+
         <div class="trabajos__contenido">
             <div class="trabajos__contenido-imagen">
                 <img src="imagenes/AluraHotel.png" alt="">
