--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
                 <p>Desarrollado con Java y MySql</p>
             </div>
             <div class="trabajos__info-botones">
-                <button><a href="https://github.com/rockmano88/Java-Sprint2-AluraHotel" target="_blank">Repositorio</a></button>
-                <button><a href="https://github.com/rockmano88/Java-Sprint2-AluraHotel/blob/main/README.md" target="_blank">Ver Read Me</a></button>
+                <button><a href="https://github.com/luisromano88/Java-Sprint2-AluraHotel" target="_blank">Repositorio</a></button>
+                <button><a href="https://github.com/luisromano88/Java-Sprint2-AluraHotel/blob/main/README.md" target="_blank">Ver Read Me</a></button>
             </div>
         </div>
         </div>
@@ -166,8 +166,8 @@
                 <p>Desarrollado con HTML, CSS, Javascript</p>
             </div>
             <div class="trabajos__info-botones">
-                <button><a href="https://github.com/rockmano88/Oracle-One-Challenge-Spring-2-Juego-Ahorcado.git" target="_blank">Repositorio</a></button>
-                <button><a href="https://rockmano88.github.io/Oracle-One-Challenge-Sprint-2-Juego-Ahorcado/" target="_blank">Ver demo</a></button>
+                <button><a href="https://github.com/luisromano88/Oracle-One-Challenge-Spring-2-Juego-Ahorcado.git" target="_blank">Repositorio</a></button>
+                <button><a href="https://luisromano.github.io/Oracle-One-Challenge-Sprint-2-Juego-Ahorcado/" target="_blank">Ver demo</a></button>
             </div>
         </div>
         </div>
@@ -181,8 +181,8 @@
                 <p>Desarrollado con Javascript, HTML, CSS</p>
             </div>
             <div class="trabajos__info-botones">
-                <button><a href="https://github.com/rockmano88/alurageek" target="_blank">Repositorio</a></button>
-                <button><a href="https://rockmano88.github.io/alurageek/" target="_blank">Demo</a></button>
+                <button><a href="https://github.com/luisromano88/alurageek" target="_blank">Repositorio</a></button>
+                <button><a href="https://luisromano88.github.io/alurageek/" target="_blank">Demo</a></button>
             </div>
         </div>
         </div>
@@ -196,8 +196,8 @@
                 <p>Desarrollado con Javascript</p>
             </div>
             <div class="trabajos__info-botones">
-                <button><a href="https://github.com/rockmano88/To-Do-Javascript.git" target="_blank">Repositorio</a></button>
-                <button><a href="https://rockmano88.github.io/To-Do/" target="_blank">Demo</a></button>
+                <button><a href="https://github.com/luisromano88/To-Do-Javascript.git" target="_blank">Repositorio</a></button>
+                <button><a href="https://luisromano88.github.io/To-Do/" target="_blank">Demo</a></button>
             </div>
         </div>
         </div>
